--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -10,8 +10,7 @@
 
 html {
     height: 100%;
-    margin: 0;
-    background-color: honeydew;
+    background-color: lavender;
 }
 
 .header {
@@ -33,16 +32,27 @@ h2 {
     color: darkslategray;
 }
 
-.catList {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
-    align-items: center;
+.loading {
+    text-align: center;
+    color: darkslategray;
+    font-size: 60pt;
+    font-family: Prism;
 }
 
 .cat {
+    margin: 2%;
     width: 350px;
     height: 350px;
+    background-color: honeydew;
+    border: double 4px darkslategray;
+    border-radius: 50px;
+}
+
+.catList {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 img {
