Cat fully styled

--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -44,8 +44,14 @@ h2 {
     width: 350px;
     height: 350px;
     background-color: honeydew;
-    border: double 4px darkslategray;
+    border: solid 4px indigo;
     border-radius: 50px;
+    color: indigo;
+}
+
+.cat:hover {
+    background-color: lightskyblue;
+    transition-duration: 1s;
 }
 
 .catList {
@@ -55,13 +61,36 @@ h2 {
     align-items: center;
 }
 
-img {
+.thumbnail {
     height: 250px;
     width: 250px;
     object-fit: cover;
+    border: double 4px darkslategray;
+    border-radius: 25px;
+}
+
+.noImage {
+    width: 240px;
+    height: 250px;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 10px;
+    font-family: Prism;
+    color: indigo;
+    font-size: 50pt;
+    border: double 4px darkslategray;
+    border-radius: 25px;
+    background-color: gainsboro;
+}
+
+a {
+    text-decoration: none;
 }
 
 .catName {
+    margin-top: 15px;
     font-family: Lemon;
     text-align: center;
+    font-size: 25pt;
+    color: indigo;
 }
